@@ -1218,12 +1218,12 @@ the C<json> write type description, above, for an actual example.
 register_read_type json => sub {
    my ($self, $cb) = @_;
 
-   require JSON;
+   my $json = $self->{json} ||=
+      eval { require JSON::XS; JSON::XS->new->utf8 }
+         || do { require JSON; JSON->new->utf8 };
 
    my $data;
    my $rbuf = \$self->{rbuf};
-
-   my $json = $self->{json} ||= JSON->new->utf8;
 
    sub {
       my $ref = eval { $json->incr_parse ($self->{rbuf}) };
